Milestone: Retrieve master record for aircarft record.

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -36,8 +36,8 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-6.0.classpath}
 excludes=
-file.reference.cglib-nodep-3.1.jar=/Users/fdorigo/Downloads/cglib-nodep-3.1.jar
-file.reference.javaee-inject-1.5-RC5.1.jar=/Users/fdorigo/Downloads/javaee-inject-1.5-RC5.1.jar
+file.reference.cglib-nodep-3.1.jar=lib/cglib-nodep-3.1.jar
+file.reference.wicketstuff-javaee-inject-6.2.0.jar=lib/wicketstuff-javaee-inject-6.2.0.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -53,7 +53,7 @@ j2ee.server.type=gfv3ee6
 jar.compress=false
 javac.classpath=\
     ${libs.Wicket 1.6.0.classpath}:\
-    ${file.reference.javaee-inject-1.5-RC5.1.jar}:\
+    ${file.reference.wicketstuff-javaee-inject-6.2.0.jar}:\
     ${file.reference.cglib-nodep-3.1.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
