--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -37,6 +37,7 @@ endorsed.classpath=\
     ${libs.javaee-endorsed-api-6.0.classpath}
 excludes=
 file.reference.cglib-nodep-3.1.jar=lib/cglib-nodep-3.1.jar
+file.reference.commons-lang3-3.4.jar=lib/commons-lang3-3.4.jar
 file.reference.wicketstuff-javaee-inject-6.2.0.jar=lib/wicketstuff-javaee-inject-6.2.0.jar
 includes=**
 j2ee.compile.on.save=true
@@ -54,7 +55,8 @@ jar.compress=false
 javac.classpath=\
     ${libs.Wicket 1.6.0.classpath}:\
     ${file.reference.wicketstuff-javaee-inject-6.2.0.jar}:\
-    ${file.reference.cglib-nodep-3.1.jar}
+    ${file.reference.cglib-nodep-3.1.jar}:\
+    ${file.reference.commons-lang3-3.4.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
