Added form properties for field readability

--- a/src/java/com/fdorigo/rmfly/wicket/RecordPage.properties
+++ b/src/java/com/fdorigo/rmfly/wicket/RecordPage.properties
@@ -1,1 +1,7 @@
 form-label=Registration Form
+recordForm.primaryPhone=Primary Phone 
+recordForm.nnumber=NNumber
+recordForm.arrivalDate=Arrival Date
+recordForm.category=Category
+recordForm.needJudging=Need Judging
+recordForm.emailAddress=Email Address
